# intensify

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  README.md  SECURITY.md  SESSION_HANDOFF.md  clippy.toml  devdoc.md  pyproject.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  reference_dataset.py  run_hc3_comparison.py  run_intensify.py  run_kalshi_midprice_accuracy.py  run_kalshi_strategy.py  run_kalshi_tob.py  run_scaling.py  run_tick.py
benchmarks/results/: hc3_intensify.json  hc3_tick.json  kalshi_midprice_accuracy_intensify.json  kalshi_midprice_accuracy_tick.json  kalshi_strategy_intensify.json  kalshi_strategy_tick.json  kalshi_tob_intensify.json  kalshi_tob_tick.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs  python.rs
crates/kernels/: Cargo.toml
crates/kernels/src/: exponential.rs  lib.rs  nonparametric.rs  power_law.rs  python.rs
crates/likelihood/: Cargo.toml
crates/likelihood/src/: lib.rs  marked_uni_exp.rs  mv_exp_dense.rs  mv_exp_recursive.rs  nonlinear_uni_exp.rs  python.rs  uni_approx_powerlaw.rs  uni_exp.rs  uni_nonparametric.rs  uni_powerlaw.rs  uni_sumexp.rs
crates/pyo3/: Cargo.toml
crates/pyo3/src/: lib.rs
crates/simulation/: Cargo.toml
crates/simulation/src/: cluster.rs  lib.rs  python.rs  thinning.rs
docs/: 0_3_0_plan.md  api_reference.rst  benchmarks.md  conf.py  examples.md  getting_started.md  index.rst  rust_port_plan.md  scaling.md  tutorials.md
docs/user_guide/: diagnostics.md  finance.md  index.rst  inference.md  kernels.md  neuroscience.md  simulation.md
examples/: biology_epidemiology_ecology.ipynb  neuroscience_spike_analysis.ipynb  seismology_aftershocks.ipynb
intensify/: __init__.py  _config.py
intensify/backends/: __init__.py
intensify/core/inference/: mle.py
intensify/core/kernels/: __init__.py  approx_power_law.py
intensify/core/processes/: hawkes.py  nonlinear_hawkes.py  poisson.py
intensify/visualization/: connectivity.py
python/intensify/: __init__.py  __init__.pyi  _config.py  _libintensify.pyi  _rust.py
python/intensify/backends/: __init__.py  _backend.py  jax_backend.py  numpy_backend.py
python/intensify/core/: __init__.py  base.py  regularizers.py
python/intensify/core/diagnostics/: __init__.py  goodness_of_fit.py  metrics.py  residuals.py
python/intensify/core/inference/: __init__.py  bayesian.py  em.py  mle.py  multivariate_hawkes_mle_params.py  online.py  univariate_hawkes_mle_params.py
python/intensify/core/kernels/: __init__.py  approx_power_law.py  base.py  exponential.py  nonparametric.py  power_law.py  sum_exponential.py
python/intensify/core/processes/: __init__.py  cox.py  hawkes.py  marked_hawkes.py  nonlinear_hawkes.py  poisson.py
python/intensify/core/simulation/: __init__.py  cluster.py  thinning.py
python/intensify/visualization/: __init__.py  connectivity.py  event_histograms.py  intensity.py  kernels.py
tests/: __init__.py  conftest.py  test_backends.py  test_cluster.py  test_cox.py  test_diagnostics.py  test_edge_cases.py  test_em.py  test_hawkes.py  test_inhomogeneous_poisson.py  test_jit.py  test_jit_integration.py  test_kernels.py  test_marked_nonlinear_online_multivariate.py  test_mle_kernel_expansion.py  test_multivariate_hawkes.py  test_plan_phases.py  test_poisson.py  test_real_data_stress.py  test_remaining_kernels.py  test_rust_marked_uni_exp.py  test_rust_mv_exp_dense.py  test_rust_mv_exp_recursive.py  test_rust_nonlinear_uni_exp.py  test_rust_uni_approx_powerlaw.py  test_rust_uni_exp.py  test_rust_uni_nonparametric.py  test_rust_uni_powerlaw.py  test_rust_uni_sumexp.py  test_simulation.py  test_textbook_cases.py  test_visualization.py
tests/_reference/: README.md  __init__.py  jax_oracles.py  test_backends_legacy.py  test_jit_integration_legacy.py  test_jit_legacy.py
tutorials/: 01_basic_hawkes.ipynb  02_multivariate.ipynb  03_marked_and_online.ipynb  04_connectivity_and_nonlinear.ipynb  05_lgcp_neuroscience.ipynb
