[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "intensify"
version = "0.3.1"
description = "Point process library with Hawkes specialization. Rust-accelerated MLE, EM, online, and Bayesian inference."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
license-files = ["LICENSE"]
authors = [{ name = "Matthew Hill" }]
keywords = ["point-process", "hawkes", "statistics", "mle", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

# Runtime dependencies — JAX is intentionally NOT here. The compiled Rust
# extension `intensify._libintensify` is mandatory; missing it raises a loud
# ImportError pointing at the [fast] extra. JAX moves to [dev] (cross-val
# oracle in tests/_reference/) and [bayesian] (numpyro is JAX-based by design).
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# `[fast]` is informational: it documents that source builds require a Rust
# toolchain. There are no Python-package additions — installing it is an
# alias for `pip install intensify` but with a clear name in error messages.
fast = []

# Bayesian inference uses numpyro, which is JAX-based by design. Gated.
bayesian = ["numpyro>=0.13", "jax>=0.4.20", "jaxlib>=0.4.20"]

# Dev: cross-validation tests in tests/_reference/ use the frozen JAX
# reference oracle. JAX/optax are dev-only; never imported at runtime by
# anything in python/intensify/.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0",
    "maturin>=1.7",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "optax>=0.1.7",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=1.0",
    "sphinx-rtd-theme>=1.3",
]
benchmark = [
    "tick>=0.7; platform_system != 'Windows'",
]

[project.urls]
Homepage = "https://github.com/hillmatt7/intensify"
Repository = "https://github.com/hillmatt7/intensify"
Documentation = "https://hillmatt7.github.io/intensify"
Issues = "https://github.com/hillmatt7/intensify/issues"
Changelog = "https://github.com/hillmatt7/intensify/blob/main/CHANGELOG.md"

# -----------------------------------------------------------------------------
# Maturin: build the aggregator crate as `intensify._libintensify`.
# python-source = "python" tells maturin the Python tree is in python/intensify/.
# -----------------------------------------------------------------------------
[tool.maturin]
manifest-path = "crates/pyo3/Cargo.toml"
module-name = "intensify._libintensify"
python-source = "python"
features = ["extension-module"]
strip = true
include = ["python/intensify/**/*.pyi", "python/intensify/py.typed"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B028", "B905"]

[tool.ruff.lint.per-file-ignores]
"python/intensify/**/__init__.py" = ["E402", "F403", "F405"]
"python/intensify/core/inference/em.py" = ["E402"]
"python/intensify/core/inference/mle.py" = ["E402"]
"python/intensify/core/inference/bayesian.py" = ["E402"]
"python/intensify/core/inference/online.py" = ["E402"]
"tests/**/*.py" = ["B007", "E702", "F401", "F811", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=intensify --cov-report=term-missing --cov-report=xml"
