[package]
name = "intensify-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types for intensify (errors, parameter layouts, shared traits)."
repository.workspace = true

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
pyo3 = { workspace = true, optional = true }
thiserror = { workspace = true }

[lints]
workspace = true
