[package]
name = "intensify-kernels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Hawkes/point-process kernels: exponential, power-law, sum-exp, nonparametric."
repository.workspace = true

[features]
default = []
python = ["dep:pyo3", "dep:numpy", "intensify-core/python"]

[dependencies]
intensify-core = { workspace = true }
ndarray = { workspace = true }
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
