[package]
name = "intensify-simulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Point-process simulators (Ogata thinning, branching/cluster)."
repository.workspace = true

[features]
default = []
python = ["dep:pyo3", "dep:numpy", "intensify-core/python", "intensify-kernels/python"]

[dependencies]
intensify-core = { workspace = true }
intensify-kernels = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
